# TIP

./: CMakeLists.txt
source/client/: CMakeLists.txt  main.cpp
source/client/interfaces/database-settings/: database_settings.cpp  database_settings.h
source/client/interfaces/font-editor/: font_editor.h
source/client/interfaces/mainwindow/: mainwindow.cpp  mainwindow.h
source/client/interfaces/options/: options.cpp  options.h
source/client/interfaces/password-form/: password_form.cpp  password_form.h
source/client/interfaces/text-position-selector/: text_position_selector.h
source/lib/: CMakeLists.txt
source/lib/database/: CMakeLists.txt
source/lib/image-printer/: CMakeLists.txt
source/lib/logger/: CMakeLists.txt
source/lib/settings/: CMakeLists.txt  settings_manager.h
source/lib/text-painter/: CMakeLists.txt  text_painter.h
source/lib/theme-loader/: CMakeLists.txt
